# mastermind

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.toml  example.env
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
examples/: README.md  avoid.txt  link.txt  to-link.txt
resources/tests/expected_outputs/: chat_completions.txt
resources/tests/mock_responses/: chat_completions.json
src/: clue.rs  config.rs  lib.rs  main.rs  model.rs  model_collection.rs  tests.rs
src/api/: chat_completions.rs  language_models.rs  mod.rs  models.rs
src/api/json_models/: chat_completion.rs  mod.rs
src/api_handlers/: api_instance.rs  chat_completions.rs  language_models.rs  mod.rs  models.rs
src/clues/: clue.rs  clue_collection.rs  mod.rs
src/configs/: config.rs  config_error.rs  mod.rs
src/json/: chat_completions.rs  mod.rs  models.rs
src/json_models/: chat_completion.rs  chat_completions.rs  language_models.rs  mod.rs
src/tests/: mod.rs
src/tests/expected_outputs/: chat_completions.txt  language_models.txt
src/tests/mock_responses/: models.json
