[package]
name = "mastermind"
version = "0.1.0"
edition = "2021"
authors = ["theoforger <theoforger@proton.me>"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }