[package]
name = "mastermind-cli"
version = "1.0.2"
edition = "2021"
authors = ["theoforger <theoforger@proton.me>"]
license = "GPL-3"
description = "An LLM-powered CLI tool to help you be a better spymaster in Codenames"
repository = "https://github.com/theoforger/mastermind"
readme = "README.md"
keywords = ["codenames", "llm"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
comfy-table = "7.1.3"
httpmock = "0.7.0"
dialoguer = "0.11.0"
toml_edit = "0.22.22"
dirs = "5.0.1"
tempfile = "3.14.0"
